Fix display code sizing on small screen sizes

--- a/2022/my-app/src/App.css
+++ b/2022/my-app/src/App.css
@@ -158,7 +158,7 @@ pre::-webkit-scrollbar {
     gap: 1rem;
   }
 
-  .TypeScript {
+  .TypeScript.code {
     font-size: small;
   }
 
