--- a/2022/my-app/src/Days/17/solution.css
+++ b/2022/my-app/src/Days/17/solution.css
@@ -12,10 +12,6 @@
   flex-wrap: wrap;
 }
 
-.calculation {
-  max-height: 300px;
-}
-
 .calculation::-webkit-scrollbar {
   width: 10px;
 }
